--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,18 @@
     "eslint:recommend",
     "plugin:@typescript-eslint/recommended"
   ],
-  "plugins": [
-        "@typescript-eslint"
-  ],
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+      "@typescript-eslint"
+  ],
+  "rules": {
+    "camelcase": "off",
+    "no-useless-constructor": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off"
+  }
 }
