--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "tsup src --out-dir build",
     "test:e2e": "vitest run --dir src/http",
     "test:e2e:watch": "vitest --dir src/http",
-    "test": "vitest run --dir src/use-cases",
-    "test:watch": "vitest --dir src/use-cases",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -23,17 +23,21 @@
     "@fastify/jwt": "^8.0.1",
     "@prisma/client": "^5.16.1",
     "@vitest/coverage-v8": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "prisma": "^5.16.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/node": "^20.14.10",
     "eslint": "^9.6.0",
+    "eslint-plugin-vitest-globals": "^1.5.0",
     "tsup": "^8.1.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3",
+    "vite": "^5.3.5",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   }
