--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.10",
     "eslint": "^9.6.0",
     "eslint-plugin-vitest-globals": "^1.5.0",
