--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "license": "MIT",
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
+    "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.1",
+    "@fastify/swagger": "^8.15.0",
+    "@fastify/swagger-ui": "^4.1.0",
     "@prisma/client": "^5.16.1",
     "@vitest/coverage-v8": "^1.6.0",
     "bcryptjs": "^2.4.3",
