--- a/package.json
+++ b/package.json
@@ -21,20 +21,22 @@
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
     "@fastify/cors": "^9.0.1",
-    "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^4.1.0",
     "@prisma/client": "^5.16.1",
     "@vitest/coverage-v8": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.16.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.10",
     "eslint": "^9.6.0",
     "eslint-plugin-vitest-globals": "^1.5.0",
