--- a/package.json
+++ b/package.json
@@ -19,32 +19,33 @@
   "author": "Vithor Carlos",
   "license": "MIT",
   "dependencies": {
-    "@fastify/cookie": "^9.3.1",
-    "@fastify/cors": "^9.0.1",
-    "@fastify/swagger": "^8.15.0",
-    "@fastify/swagger-ui": "^4.1.0",
-    "@prisma/client": "^5.16.1",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^10.0.2",
+    "@fastify/jwt": "^9.0.4",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.2",
+    "@prisma/client": "^5.22.0",
+    "@vitest/coverage-v8": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.5",
-    "fastify": "^4.28.1",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.16.1",
-    "zod": "^3.23.8"
+    "prisma": "^5.22.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.10",
-    "eslint": "^9.6.0",
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/node": "^20.17.19",
+    "eslint": "^9.20.1",
     "eslint-plugin-vitest-globals": "^1.5.0",
-    "tsup": "^8.1.0",
-    "tsx": "^4.16.2",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.5",
+    "tsup": "^8.3.6",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3",
+    "vite": "^5.4.14",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.1"
   }
 }
