feat: start creating upload file

--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^10.0.2",
     "@fastify/jwt": "^9.0.4",
-    "@fastify/swagger": "^9.4.2",
-    "@fastify/swagger-ui": "^5.2.2",
+    "@fastify/multipart": "^9.0.3",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "^5.22.0",
     "@vitest/coverage-v8": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "fastify-multer": "^2.0.3",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.22.0",
+    "sharp": "^0.34.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -39,8 +42,10 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20.17.19",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.20.1",
     "eslint-plugin-vitest-globals": "^1.5.0",
+    "supertest": "^7.1.4",
     "tsup": "^8.3.6",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
