--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "lint": "eslint src --ext .ts --fix",
@@ -19,38 +20,39 @@
   "author": "Vithor Carlos",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.858.0",
     "@fastify/cookie": "^11.0.2",
-    "@fastify/cors": "^10.0.2",
-    "@fastify/jwt": "^9.0.4",
+    "@fastify/cors": "^11.0.1",
+    "@fastify/jwt": "^9.1.0",
     "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
-    "@prisma/client": "^5.22.0",
-    "@vitest/coverage-v8": "^1.6.1",
-    "bcryptjs": "^2.4.3",
+    "@/prisma/generated": "^6.13.0",
+    "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.7",
-    "fastify": "^5.2.1",
+    "dotenv": "^17.2.1",
+    "fastify": "^5.4.0",
     "fastify-multer": "^2.0.3",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.22.0",
+    "prisma": "^6.13.0",
     "sharp": "^0.34.3",
-    "zod": "^3.24.2"
+    "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.8",
-    "@types/node": "^20.17.19",
+    "@faker-js/faker": "^9.9.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.1.0",
     "@types/supertest": "^6.0.3",
-    "eslint": "^9.20.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
+    "eslint": "^9.32.0",
     "eslint-plugin-vitest-globals": "^1.5.0",
     "supertest": "^7.1.4",
-    "tsup": "^8.3.6",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
-    "vite": "^5.4.14",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.1"
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.3",
+    "typescript": "^5.9.2",
+    "vite": "^7.0.6",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   }
 }
