--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint src --ext .ts --fix",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test:e2e": "vitest run --dir src/http",
-    "test:e2e:watch": "vitest --dir src/http",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "test:e2e": "vitest run -c vitest.e2e.config.ts",
+    "test:e2e:watch": "vitest -c vitest.e2e.config.ts",
+    "test": "vitest run -c vitest.unit.config.ts",
+    "test:watch": "vitest -c vitest.unit.config.ts",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -27,21 +29,21 @@
     "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
-    "@/prisma/generated": "^6.13.0",
+    "@prisma/client": "6.14.0",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
     "fastify": "^5.4.0",
     "fastify-multer": "^2.0.3",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.13.0",
+    "prisma": "^6.14.0",
     "sharp": "^0.34.3",
     "zod": "^4.0.14"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.2.1",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
@@ -53,6 +55,7 @@
     "typescript": "^5.9.2",
     "vite": "^7.0.6",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "vitest-environment-prisma": "file:./prisma/vitest-environment-prisma"
   }
 }
