--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 NODE_ENV=
 PORT=
 DATABASE_URL=
+DATABASE_SCHEMA=
+JWT_SECRET=
+CLOUDFARE_ACCOUNT_ID=
+AWS_BUCKET_NAME=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
