--- a/package.json
+++ b/package.json
@@ -11,51 +11,52 @@
     "build": "tsup src --out-dir build",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
-    "test:e2e": "vitest run -c vitest.e2e.config.ts",
-    "test:e2e:watch": "vitest -c vitest.e2e.config.ts",
-    "test": "vitest run -c vitest.unit.config.ts",
-    "test:watch": "vitest -c vitest.unit.config.ts",
-    "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:cov": "vitest run --coverage",
+    "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+    "test:e2e": "vitest run --config ./vitest.config.e2e.ts",
+    "test:e2e:watch": "vitest --config ./vitest.config.e2e.ts"
   },
   "keywords": [],
   "author": "Vithor Carlos",
   "license": "MIT",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.858.0",
+    "@aws-sdk/client-s3": "^3.988.0",
     "@fastify/cookie": "^11.0.2",
-    "@fastify/cors": "^11.0.1",
-    "@fastify/jwt": "^9.1.0",
-    "@fastify/multipart": "^9.0.3",
-    "@fastify/swagger": "^9.5.1",
-    "@fastify/swagger-ui": "^5.2.3",
-    "@prisma/client": "6.14.0",
-    "bcryptjs": "^3.0.2",
-    "dayjs": "^1.11.13",
-    "dotenv": "^17.2.1",
-    "fastify": "^5.4.0",
+    "@fastify/cors": "^11.2.0",
+    "@fastify/jwt": "^10.0.0",
+    "@fastify/multipart": "^9.4.0",
+    "@fastify/swagger": "^9.7.0",
+    "@fastify/swagger-ui": "^5.2.5",
+    "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
+    "bcryptjs": "^3.0.3",
+    "dayjs": "^1.11.19",
+    "dotenv": "^17.2.4",
+    "fastify": "^5.7.4",
     "fastify-multer": "^2.0.3",
-    "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.14.0",
-    "sharp": "^0.34.3",
-    "zod": "^4.0.14"
+    "jsonwebtoken": "^9.0.3",
+    "sharp": "^0.34.5",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@faker-js/faker": "^9.9.0",
+    "@faker-js/faker": "^10.3.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.2.1",
+    "@types/node": "^25.2.3",
     "@types/supertest": "^6.0.3",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
-    "eslint": "^9.32.0",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/ui": "^4.0.18",
+    "eslint": "^10.0.0",
     "eslint-plugin-vitest-globals": "^1.5.0",
-    "supertest": "^7.1.4",
-    "tsup": "^8.5.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.9.2",
-    "vite": "^7.0.6",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4",
-    "vitest-environment-prisma": "file:./prisma/vitest-environment-prisma"
+    "prisma": "^7.4.0",
+    "supertest": "^7.2.2",
+    "tsup": "^8.5.1",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "unplugin-swc": "^1.5.9",
+    "vite": "^7.3.1",
+    "vite-tsconfig-paths": "^6.1.1",
+    "vitest": "^4.0.18"
   }
 }
